AC_PREREQ(2.1)
AC_INIT([rtiff], [1.1], [eric.kort@vai.org])
AC_CONFIG_SRCDIR([src/rtiff.c])

# Checks for programs.
AC_PROG_CC

# Checks for libtiff.
AC_CHECK_LIB([tiff], [TIFFOpen], [], [
                echo Error: Could not find libtiff.
                exit -1
                ])

PKG_LIBS="-ltiff"

AC_SUBST(PKG_LIBS)
AC_OUTPUT([src/Makevars])

